<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Burpple</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_title_explore">Explore</string>
    <string name="drawer_title_feed">Food Venues</string>
    <string name="drawer_title_guides">Burpple Guides</string>
    <string name="drawer_title_profile">Profile</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_cities">Cities</string>
    <string name="drawer_title_deals">Deals Feed</string>
    <string name="desc_drawer_open">Open navigation drawer</string>
    <string name="desc_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- error messages -->
    <string name="error_network">No connection. Please Check your network settings.</string>
    <string name="error_default">Something went wrong. Please try again</string>
    <string name="error_signup_empty_email">Email is required</string>
    <string name="error_signup_empty_first_name">First name is required</string>
    <string name="error_signup_empty_last_name">Last name is required</string>
    <string name="error_signup_empty_username">Username is required</string>
    <string name="error_signup_invalid_password">Password minimum 8 characters</string>
    <string name="error_empty_login">Please enter your email and password.</string>
    <string name="error_login">Failed to login. Check your email or password.</string>
    <string name="error_duplicate_mail">Email has been taken</string>
    <string name="error_signup">Failed to create account. Email or username has already been used.</string>
    <string name="error_maintenance">We are having server maintenance. Contact feedback@burpple.com for information.</string>

    <!-- activity title -->
    <string name="title_activity_deals_feed">DealsFeedActivity</string>
    <string name="title_activity_front_page">FrontPageActivity</string>
    <string name="create_account">Create Account</string>
    <string name="login_email">Login with Email</string>
    <string name="login_google">Login with Google</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="dialog_no_network">Network Error</string>
    <string name="dialog_check_network">Please check your network settings</string>
    <string name="no">No</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_confirmation">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="progress_loading">Brewing...</string>
    <string name="copy_frontpage_1">Discover the perfect place to eat.</string>
    <string name="copy_frontpage_2">Journal your moments.</string>
    <string name="copy_frontpage_3">Recommend the best.</string>
    <string name="copy_frontpage_1_sub">Dinner dates, cheap eats, cafes and more.</string>
    <string name="copy_frontpage_2_sub">Organize your food recommendations into personal collections</string>
    <string name="copy_frontpage_3_sub">Snap a photo, tag a location, and share your experience.</string>
    <string name="desc_image_view">Image</string>
    <string name="form_signup_first_name">First name</string>
    <string name="hint_first_name">first name</string>
    <string name="form_signup_last_name">Last name</string>
    <string name="hint_last_name">last name</string>
    <string name="form_signup_username">Username</string>
    <string name="hint_username">minimum 6 characters</string>
    <string name="form_signup_email">Email</string>
    <string name="hint_email">example@email.com</string>
    <string name="form_signup_password">Password</string>
    <string name="hint_password">minimum 8 characters</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="login">Login</string>
    <string name="form_forgot_password">Forgot your password?</string>
    <string name="progress_auth">Signing in</string>
    <string name="logout">Log out</string>
    <string name="title_activity_venues_feed">VenuesFeedActivity</string>
    <string name="title_activity_deal">DealActivity</string>
    <string name="push_summary">Show all notifications</string>
    <string name="menu_action_search">Search</string>
    <string name="title_activity_search_deal">SearchDealActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="wish_add">Add to Wishlist</string>
    <string name="wish_remove">Remove from Wishlist</string>
    <string name="bookmark_add">Add to Bookmarks</string>
    <string name="bookmark_remove">Remove from Bookmarks</string>
    <string name="registering_account">Registering account...</string>
    <string name="venue_avatar">Venue Avatar</string>
    <string name="deal_avatar">Deal Avatar</string>
    <string name="venue_bio">Venue Description</string>
    <string name="venue_location">Venue Location</string>
    <string name="venue_phone">Venue Phone</string>
    <string name="deal_desc">Deal Description</string>
    <string name="deal_terms">Deal Terms</string>
    <string name="deal_period">Deal Period</string>
    <string name="redeem_button">Redeem</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="low_storage_error">QR code dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">Error reading barcode</string>
    <string name="title_activity_my_redemptions">MyRedemptionsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_create_feedback">Create Feedback</string>

</resources>
