<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/header">

        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/ic_drawer_feed"
            android:title="@string/drawer_title_feed"/>

        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_action_map"
            android:title="@string/drawer_title_deals"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/subheader">

        <item
            android:id="@+id/navigation_sub_item_1"
            android:icon="@drawable/ic_drawer_profile"
            android:title="My Profile"/>
        <item
            android:id="@+id/navigation_sub_item_2"
            android:icon="@drawable/ic_restaurant_menu_white_24dp"
            android:title="My Redemptions"/>
        <item
            android:id="@+id/navigation_sub_item_3"
            android:icon="@drawable/ic_rate_review_white_24dp"
            android:title="My Feedbacks"/>
        <item
            android:id="@+id/navigation_sub_item_4"
            android:icon="@drawable/ic_highlight_off_white_24dp"
            android:title="@string/logout"/>

    </group>
</menu>