<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_marginTop="@dimen/form_margin"
                card_view:cardCornerRadius="@dimen/cardview_corner_radius_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/Text.Bold"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/form_signup_first_name" />

                        <EditText
                            android:id="@+id/input_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/hint_first_name"
                            android:inputType="textPersonName|textCapWords"
                            android:textSize="@dimen/font_input" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/Text.Bold"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/form_signup_last_name" />

                        <EditText
                            android:id="@+id/input_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/hint_last_name"
                            android:inputType="textPersonName|textCapWords"
                            android:textSize="@dimen/font_input" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_marginTop="@dimen/form_margin"
                card_view:cardCornerRadius="@dimen/cardview_corner_radius_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/Text.Bold"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/form_signup_username" />

                        <EditText
                            android:id="@+id/input_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/hint_username"
                            android:inputType="textVisiblePassword"
                            android:textSize="@dimen/font_input" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/Text.Bold"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/form_signup_email" />

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/font_input" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/Text.Bold"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/form_signup_password" />

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/font_input" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button_signup"
                style="@style/Button.Green.Big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/create_account" />

            <TextView
                android:id="@+id/terms_of_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="By tapping to continue, you are indicating that you have read the Privacy Policy and agree to the Terms of Service."
                style="@style/Text.Ash"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>