<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_marginTop="@dimen/form_margin"
                card_view:cardCornerRadius="@dimen/cardview_default_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/Text.Bold"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/form_email"/>

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/font_input" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/Text.Bold"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/form_password"/>

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/font_input" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button_login"
                style="@style/Button.Green.Big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/text_forgot_password"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_transparent_button"
                android:text="@string/form_forgot_password"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>