<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_placeholder"
        style="@style/Image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Bottom most -->
    <LinearLayout
        android:id="@+id/layout_default_signup"
        android:layout_width="@dimen/btn_frontpage_max_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/btn_frontpage_margin"
        android:layout_marginLeft="@dimen/btn_frontpage_margin"
        android:layout_marginRight="@dimen/btn_frontpage_margin"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_signup"
            style="@style/Button.Transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_signup"
            android:drawableLeft="@drawable/ic_signup"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/create_account"
            android:textColor="@color/link_white" />

        <Button
            android:id="@+id/button_login"
            style="@style/Button.Transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_login"
            android:drawableLeft="@drawable/ic_login"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login_email"
            android:textColor="@color/link_white" />
    </LinearLayout>

    <Button
        android:id="@+id/button_google"
        style="@style/Button.Google"
        android:layout_width="@dimen/btn_frontpage_max_width"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_default_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/btn_frontpage_margin"
        android:layout_marginRight="@dimen/btn_frontpage_margin"
        android:text="@string/login_google"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_facebook"
        style="@style/Button.Facebook"
        android:layout_width="@dimen/btn_frontpage_max_width"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_google"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/btn_frontpage_margin"
        android:layout_marginRight="@dimen/btn_frontpage_margin"
        android:text="@string/login_facebook"
        android:visibility="gone"/>

</RelativeLayout>